Create Holder to simplify code and update tests